package zmqchat;

message Hello {
  required string msgContent = 1;
  optional int64 timestamp = 2;
}

message InvalidRequest {
  required int32 errorCode = 1;
  optional bytes originalRequest = 2;
}
